--- a/frontendnsq/nsqfrontend/package.json
+++ b/frontendnsq/nsqfrontend/package.json
@@ -39,6 +39,9 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "react-hook-form": "^7.27.1",
+    "react-router-dom": "^6.2.1",
+    "sweetalert2": "^11.4.4"
   }
 }
