--- a/frontendnsq/nsqfrontend/package.json
+++ b/frontendnsq/nsqfrontend/package.json
@@ -11,7 +11,12 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^2.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "react-hook-form": "^7.27.1",
+    "react-router-dom": "^5.3.0",
+    "sweetalert2": "^11.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,11 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "react-hook-form": "^7.27.1",
-    "react-router-dom": "^6.2.2",
-    "sweetalert2": "^11.4.4"
-  }
+  "devDependencies": {}
 }
